--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <div class=section1>
         <h1>Internet pollue ?</h1>
-        <p>Internet consomme 1500 TWH par an</p>
+        <p>Si Internet était un pays, il serait le 3ème plus gros consommateur d’électricité au monde avec 1500 TWH par an, derrière la Chine et les Etats-Unis. Au total, le numérique consomme 10 à 15 % de l’électricité mondiale, soit l’équivalent de 100 réacteurs nucléaires. Et cette consommation double tous les 4 ans !</p>
         <img src="pictures/fond.png" width=100%>
     </div>
   
