--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     
     </header>
 <div class=space>
-    
-    <img  src="pictures/galaxy.png" height=100%>
-    <div class=color-gradient></div>
-    lel
+        <img class=satellite src="pictures/satellite.svg" height=150px>
+    <div class=flip><img class=astronaut src="pictures/astronaut.png" height=150px></div>
+
+   
+   
     <img class=cloudsky src="pictures/cloud.svg" width=4000px></div>
     <div class=sky>
         <img class=cloud src="pictures/cloud.svg" width=4000px>
